--- a/client/public/login.html
+++ b/client/public/login.html
@@ -21,17 +21,19 @@
     <title>Login - Kubernaut</title>
   </head>
   <body>
-    <div className="container">
-      <div className="row">
-        <div className="col-sm-12">
-          <h4>Login:</h4>
-        </div>
-      </div>
-      <div className="row">
-        <div className="col-sm-12">
-          <form method="POST">
-            <button>Login</button>
-          </form>
+    <div class="container">
+      <div class="row mt-5">
+        <div class="col d-flex justify-content-center">
+          <div class="card text-center">
+            <div class="card-header px-5">
+              Kubernaut
+            </div>
+            <div class="card-body px-5">
+              <form method="POST">
+                <button type="button" class="btn btn-dark">Login</button>
+              </form>
+            </div>
+          </div>
         </div>
       </div>
     </div>
