--- a/client/public/login.html
+++ b/client/public/login.html
@@ -30,7 +30,7 @@
             </div>
             <div class="card-body px-5">
               <form method="POST">
-                <button type="button" class="btn btn-dark">Login</button>
+                <button type="submit" class="btn btn-dark">Login</button>
               </form>
             </div>
           </div>
