--- a/client/public/login.html
+++ b/client/public/login.html
@@ -8,7 +8,7 @@
       manifest.json provides metadata used when your web app is added to the
       homescreen on Android. See https://developers.google.com/web/fundamentals/engage-and-retain/web-app-manifest/
     -->
-    <link rel="stylesheet" href="/loginAssets/bootstrap.min.css">
+    <link rel="stylesheet" href="/loginAssets/main.611ee939.chunk.css">
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
